# minichain

./: .travis.yml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml
chain/: __init__.py  __main__.py  block.py  blockchain.py  cli.py  client.py  mempool.py  p2p.py  server.py  test.py  transaction.py  udpserver.py  wallet.py
chain/tests/: __init__.py  test_block.py  test_blockchain.py  test_tx.py  test_utils.py
chain/utils/: elliptic.py  log.py
tests/: __init__.py  test_blockchain.py  test_tx.py  test_utils.py
