[tool.poetry]
name = "minichain"
version = "0.1.0"
# doc
authors = [
  "Weiliang Li <to.be.impressive@gmail.com>",
]
description = "Mini blockchain in Python"

[tool.poetry.dependencies]
python = "^3.8"
# 3rd party
coincurve = "^15.0.0"
eth_keys = "^0.3.3"
kademlia = "^2.2.2"
pysha3 = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
mypy = "^0.902"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
