[tool.poetry]
name = "minichain"
version = "0.1.0"
# doc
authors = [
  "Weiliang Li <to.be.impressive@gmail.com>",
]
description = "Mini blockchain in Python"

[tool.poetry.dependencies]
python = "^3.8"
# 3rd party
coincurve = "^17.0.0"
eth_keys = "^0.3.4"
kademlia = "^2.2.2"
pysha3 = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^22.1"
flake8 = "^4.0.1"
mypy = "^0.931"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
