[tool.poetry]
name = "minichain"
version = "0.1.0"
# doc
authors = [
  "Weiliang Li <to.be.impressive@gmail.com>",
]
description = "Mini blockchain in Python"

[tool.poetry.dependencies]
python = "^3.8"
# 3rd party
coincurve = "^18.0.0"
eth_keys = "^0.4.0"
kademlia = "^2.2.2"
pysha3 = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^22.10"
flake8 = "^5.0.4"
mypy = "^1.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
